hard-gists/3948701/run.log
=== Docker Run Log for 3948701 ===
Started at: Mi 29. Okt 14:06:51 CET 2025

[2025-10-29 14:06:52] START: Running container for 3948701
[2025-10-29 14:06:52] SUCCESS: Container 7201ac8835e8cc69f1ffe1e39040b63512b71e0d062d41945dc96bba07c42efb started for 3948701
=== Container logs for 3948701 ===
  File "/snippet.py", line 211
    character = json.JSONDecoder().decode('"\u00%s"' % self.trans.read(2))
                                                     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 1-4: truncated \uXXXX escape
=== End of logs for 3948701 ===
[2025-10-29 14:06:54] INFO: Container 7201ac8835e8cc69f1ffe1e39040b63512b71e0d062d41945dc96bba07c42efb has stopped
